test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/plx1_if_no_line_break.plx
pub fn main(none) i32 {
    if 0 {
        return 1   
    } elif {
        return 0
    }
}
